Fix light buttons in dark mode

--- a/resources/assets/sass/entries.sass
+++ b/resources/assets/sass/entries.sass
@@ -31,6 +31,14 @@
     position: relative
     margin-left: 10px
     top: -2px
+    .btn-danger
+      color: #fff
+      background-color: #dc3545
+      border-color: #dc3545
+    .btn-success
+      color: #fff
+      background-color: #28a745
+      border-color: #28a745
   i.fa
     color: #c0c0c0
     margin-right: 1px
