--- a/resources/assets/sass/night.sass
+++ b/resources/assets/sass/night.sass
@@ -100,6 +100,11 @@ body.night
     color: #D8D8D8
     background-color: #5A5A5A
 
+  .btn-light
+    color: #a6a6a6
+    background-color: #424242
+    border-color: #575757
+
   .btn-success
     color: #FFF
     background-color: #5CB85C
